# dazabaze

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml  env.example
backend/src/: auth.rs  env.rs  main.rs  models.rs  server.rs
backend/src/api/: mod.rs  respond.rs
backend/src/api/auth/: login.rs  signup.rs
backend/src/api/departments/: get_by_id.rs  list.rs  mod.rs
backend/src/api/employees/: create.rs  delete.rs  get_by_id.rs  list.rs  search.rs  update.rs
backend/src/api/health/: diagnostics.rs  mod.rs  ping.rs
backend/src/api/issues/: create.rs  delete.rs  get_by_id.rs  list.rs  mod.rs  search.rs  update.rs
backend/src/api/me/: delete.rs  get.rs  mod.rs
backend/src/api/organizations/: add_member.rs  create.rs  delete.rs  get_by_id.rs  list.rs  members_list.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/issues/[id]/: page.tsx
src/app/issues/new/: page.tsx
src/app/login/: page.tsx
src/app/org/new/: page.tsx
src/app/profile/: page.tsx
src/app/signup/: page.tsx
src/app/ui/: IssuesHome.tsx
src/components/: AppShell.tsx  AuthShell.tsx  IssueEditor.tsx  RootChrome.tsx
src/hooks/: useAuth.ts  useIssue.ts  useIssueMutations.ts  useIssues.ts  useMe.ts  useOrgMembers.ts  useOrganizations.ts
src/lib/: apiBase.ts  apiClient.ts  authStorage.ts  types.ts  validation.ts
