[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
actix-cors = "0.7.1"
actix-web = "4.11.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
mongodb = "3.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.18.0"
chrono = "0.4.43"
rand = "0.9.2"
